--- a/view.css
+++ b/view.css
@@ -11,7 +11,9 @@
     --highlight: #CDFB82; 
     --font-family: 'Poppins', sans-serif;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 
 * {
     margin: 0;
